<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_trace_starttime" />
        
        <EditText
            android:id="@+id/et_starttime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:focusable="false" />
        
        <Button
            android:id="@+id/btn_setstart"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="设置" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_trace_endtime" />
        
        <EditText
            android:id="@+id/et_endtime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:focusable="false" />
        
        <Button
            android:id="@+id/btn_setend"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="设置" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_trace_cancle"
             />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_trace_confirm"
            />

    </LinearLayout>

</LinearLayout>