<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/title_bg" >

        <LinearLayout
            android:id="@+id/return_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/return_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="返回"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="防护圈"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/new_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/add_bg"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/trace_controls"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <fragment
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="com.amap.api.maps2d.SupportMapFragment" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClearMap"
                        android:text="@string/clear_map" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onResetMap"
                        android:text="@string/reset_map" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/custom_info_window_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/default_info_window"
                        android:checked="true"
                        android:text="@string/default_info_window" />

                    <RadioButton
                        android:id="@+id/custom_info_contents"
                        android:text="@string/custom_info_contents" />

                    <RadioButton
                        android:id="@+id/custom_info_window"
                        android:text="@string/custom_info_window" />
                </RadioGroup>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>