<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/trace_controls"
        android:gravity="center_horizontal" >

    <fragment
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        class="com.amap.api.maps2d.SupportMapFragment"/>
    
    
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:visibility="gone" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onClearMap"
                                android:text="@string/clear_map" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onResetMap"
                                android:text="@string/reset_map" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/custom_info_window_options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/default_info_window"
                                android:checked="true"
                                android:text="@string/default_info_window" />

                            <RadioButton
                                android:id="@+id/custom_info_contents"
                                android:text="@string/custom_info_contents" />

                            <RadioButton
                                android:id="@+id/custom_info_window"
                                android:text="@string/custom_info_window" />
                        </RadioGroup>
                    </LinearLayout>
    
    </FrameLayout>

    <LinearLayout
        android:id="@+id/trace_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" >
        
        
    
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        

                <SeekBar
                    android:id="@+id/traceSeekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                
    </LinearLayout>
        
            <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_trace_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="前一个" />

                <Button
                    android:id="@+id/btn_trace_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="播放" />

                <Button
                    android:id="@+id/btn_trace_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="下一个" />
                
    </LinearLayout>
        
        
    </LinearLayout>

    <Spinner
        android:id="@+id/spn_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>
