<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/title_bg"
        android:gravity="center_vertical"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/draw_switch"
            android:layout_centerVertical="true"
            android:background="@drawable/switch_btn"
            />   
       <LinearLayout 
           android:id="@+id/terminal_name_layout"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:layout_centerInParent="true"
           >
           <TextView 
               android:id="@+id/terminarl_name_tv"
               android:layout_width="150dp"
               android:layout_height="match_parent"
               android:text="8080"
               android:textColor="@android:color/white"
               android:gravity="center"
               android:singleLine="true"
               android:ellipsize="end"
               android:textSize="20sp"
               />
           <ImageView 
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/down_arrow_h"
               android:layout_gravity="center_vertical"
               />
       </LinearLayout>         
    </RelativeLayout>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <include
                android:id="@+id/bottom_menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                layout="@layout/view_main_bottom_layout" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/bottom_menu_layout"
                android:background="@color/main_bg_color" >

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <fragment
                        android:id="@+id/map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        class="com.amap.api.maps2d.SupportMapFragment" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:visibility="gone" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onClearMap"
                                android:text="@string/clear_map" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onResetMap"
                                android:text="@string/reset_map" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/custom_info_window_options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/default_info_window"
                                android:checked="true"
                                android:text="@string/default_info_window" />

                            <RadioButton
                                android:id="@+id/custom_info_contents"
                                android:text="@string/custom_info_contents" />

                            <RadioButton
                                android:id="@+id/custom_info_window"
                                android:text="@string/custom_info_window" />
                        </RadioGroup>
                    </LinearLayout>
                </FrameLayout>

                <include
                    android:id="@+id/switch_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    layout="@layout/view_main_switch_layout" />
            </RelativeLayout>
        </RelativeLayout>

        <include
            android:id="@+id/left_drawer"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            layout="@layout/view_main_drawer_layout" />
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>